--- a/friends/src/App.scss
+++ b/friends/src/App.scss
@@ -6,9 +6,9 @@
 }
 
 .friend {
-  width: 30%;
-
-  margin-bottom: 2%;
+  width: 95%;
+  margin-bottom: 4%;
+  @include cool-border;
   &-name {
     padding: 1%;
     display: flex;
@@ -32,10 +32,21 @@
     border-bottom: 1px solid #000;
     padding: 2%;
   }
+
+  &:first-child {
+    margin-top: 2.5%;
+  }
+
+  &:last-child {
+    margin-bottom: 2.5%;
+  }
 }
 
 .friends {
-
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  align-items: center;
   h3 {
     display: flex;
     justify-content: center;
@@ -48,7 +59,9 @@
     flex-flow: column;
     align-items: center;
     overflow-y: scroll;
-    max-height: 50vh;
+    max-height: 67vh;
+    width: 30%;
+    border: 1px solid #000;
   }
 }
 
@@ -62,6 +75,7 @@
     text-decoration: none;
     font-size: 1.25rem;
     color: white;
+    cursor: pointer;
 
     &.active {
       background: lighten($color: rgb(0, 195, 255), $amount: 10%);
